--- a/styles/nav.css
+++ b/styles/nav.css
@@ -6,7 +6,7 @@
     background-color:white;
     border-bottom: 1px #e5e7eb solid;
     display: flex;
-    justify-content:space-between ;
+    justify-content:space-around;
     height: 4em;
     z-index: 1000;
     
@@ -17,7 +17,7 @@
     font-size: 20px;
     align-items: center;
     text-align: center;
-    margin-left: 176px;
+    /* margin-left: 176px; */
 }
 .Algoviz{
     display: flex;
@@ -43,7 +43,7 @@
     /* border: 1px black solid; */
     display: flex;
     justify-content: space-between;
-    margin-right: 176px;
+    /* margin-right: 176px; */
     /* text-decoration: underline; */
 }
 
@@ -106,7 +106,11 @@
     .hamburger {
         display: flex;
         align-items: center;
-        margin-right: 1rem;
+    }
+    .left-side{
+        margin-left: 0;
+        justify-content: center;
+        flex: 1;
     }
 }
 
